--- a/static/css/index.css
+++ b/static/css/index.css
@@ -122,6 +122,7 @@ body {
     line-height: 1.1 !important;
 }
 
+
 .publication-banner {
   max-height: 70vh;
   border-radius: var(--border-radius-lg);
@@ -181,6 +182,7 @@ body {
    position: relative;
 }
 
+
 .publication-authors a::after {
     content: '';
     position: absolute;
@@ -188,7 +190,7 @@ body {
     height: 2px;
     bottom: -2px;
     left: 0;
-    background: var(--gradient-accent);
+    background: var(--primary-color);
     transition: var(--transition);
 }
 
